--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-plugin-msal",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "scripts": {
     "build": "rollup -c"
@@ -11,6 +11,10 @@
     "dist/*"
   ],
   "author": "Jörn Seidel",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/casoon/vue-plugin-msal"
+  },
   "license": "ISC",
   "devDependencies": {
     "rollup": "^2.70.1",
@@ -18,6 +22,9 @@
     "rollup-plugin-vue": "^6.0.0"
   },
   "peerDependencies": {
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "js-cookie": "^3.0.1"
   }
 }
+
+
