--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
+.DS_Store
 node_modules
+public
+dist/
+coverage
+docs/.vuepress/dist
+.npmrc
+.yarn-cache
+
+# local env files
 .env.local
-.tmp
-package-lock.json
-yarn.lock
+.env.*.local
+
+.scannerwork
+
+# related test files
+/tests/e2e/reports
+/tests/e2e/videos
+/tests/e2e/screenshots
+
+# editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
