--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-plugin-msal",
   "private": false,
-  "version": "0.1.0",
+  "version": "0.1.8",
   "description": "",
   "scripts": {
     "dev": "vite",
@@ -10,6 +10,7 @@
   },
   "main": "./dist/vue-plugin-msal.umd.js",
   "module": "./dist/vue-plugin-msal.es.js",
+  "typings": "./dist/index.lib.d.ts",
   "exports": {
     ".": {
       "import": "./dist/vue-plugin-msal.es.js",
@@ -29,7 +30,8 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "typescript": "^4.7.2",
     "vite": "^2.9.9",
-    "vue-tsc": "^0.34.16"
+    "vue-tsc": "^0.34.16",
+    "vite-plugin-dts": "^1.2.0"
   },
   "dependencies": {
     "pinia": "^2.0.14",
